# HPC

./: README.md
lab1/: hello_world  hello_world.cpp  mat_mult  mat_mult.cpp
lab2/: dft  dft.cpp  gather_res.sh  plot.py
lab2/utils/: bmp.cpp
zad1/: clicque.cu  errors.h  example.in  main  main.cu
zad2/generator-e/: CMakeCache.txt  CMakeLists.txt  Makefile  ca3dmm  ca3dmm.cpp  cmake_install.cmake  generator  generator_all  generator_all.cpp  generator_main.cpp  multiplication.cpp  multiplication.h  xd.cpp
